fix: fix icons visibility and style

--- a/sources/styles/pages.less
+++ b/sources/styles/pages.less
@@ -2144,8 +2144,6 @@
 }
 
 .webix_view.webix_control.webix_el_button.filter-scroll-button.filter-scroll-button {
-  bottom: 10px;
-  right: 10px;
   .webix_img_btn {
     background-color: transparent;
     border: 2px solid black;
@@ -2159,6 +2157,7 @@
   background: transparent;
   border: 0;
   margin: 0;
+  color:rgba(0, 0, 0, 0.4);
   .webix_template .fas {
     margin: 0 50%;
   }
